# bioMEMEPy

./: LICENSE  MEME.py  README.md  pyproject.toml
benchmark/: benchmark.py
src/bioMEMEPy/: __init__.py  extract.py  handler.py  monomers.py  oops.py  pipeline.py  tools.py  zoops.py
src/bioMEMEPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_handler.py  test_meme.py  test_tools.py
tests/fastas/oops/: crp0.fasta  fasta_gen.py
