[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'bioMEMEPy'
version = '0.0.3'
description = "Multiple EM for motif discovery. - OOPS model only"
readme = 'README.md'
requires-python = '>=3.13'
dependencies = []

[tool.setuptools.packages.find]
where = ['src']